réparation des tables de routages